[project]
name = "esb-oms"
version = "0.1.0"
description = "Python client library for ESB OMS API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ESB OMS Contributors" }
]
keywords = ["esb", "oms", "api", "client", "pos", "sales"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.0,<26.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
examples = ["pandas>=2.0"]

[project.urls]
Homepage = "https://github.com/kiwamizamurai/esb-oms-python"
Documentation = "https://github.com/kiwamizamurai/esb-oms-python#readme"
Repository = "https://github.com/kiwamizamurai/esb-oms-python"
Issues = "https://github.com/kiwamizamurai/esb-oms-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
esb_oms = ["py.typed"]

[dependency-groups]
dev = [
    "ruff==0.14.1",
    "mypy==1.18.2",
    "poethepoet==0.37.0",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".tox",
    "build",
    "dist",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Reference: https://kobzol.github.io/rust/python/2023/05/20/writing-python-like-its-rust.html
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "ANN",   # flake8-annotations
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "PLR",   # pylint refactor
    "PLW",   # pylint warnings
    "TRY",   # tryceratops
    "RUF",   # ruff-specific rules
    "DTZ",   # flake8-datetimez
    "FA",    # flake8-future-annotations
    "PIE",   # flake8-pie
    "ISC",   # flake8-implicit-str-concat
    "TCH",   # flake8-type-checking
]

ignore = [
    "PLR0913", # Too many arguments (complex functions may need them)
    "TRY003",  # Long exception messages (detailed errors are useful)
    "PLR2004", # Magic numbers (HTTP status codes have clear meaning)
    "PLR0912", # Too many branches (error handling may require them)
    "PLR0915", # Too many statements (error handling may require them)
    "ANN401",  # Any type (JSON etc. needs flexibility)
    "TC003",   # TYPE_CHECKING block (Pydantic models need runtime)
    "RUF022",  # __all__ sorting (prefer categorical grouping)
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_imports = "normal"
ignore_missing_imports = true
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
incremental = true
cache_dir = ".mypy_cache"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poe.tasks]
dev = "python src/main.py"
lint = "ruff check src/"
format = "ruff format src/"
format-check = "ruff format --check src/"
typecheck = "mypy --install-types --non-interactive src/"
check = ["lint", "format-check", "typecheck"]
fix = "ruff check --fix src/"
clean = """
rm -rf .ruff_cache .mypy_cache __pycache__ **/__pycache__
rm -rf *.egg-info dist build
"""
test = "echo 'No tests configured yet'"
test-watch = "echo 'No tests configured yet'"
install = "uv sync"
install-dev = "uv sync --dev"
pre-commit = ["format", "fix", "check"]
